--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,269 @@
-.App {
-  text-align: center;
+body {
+  width: 1340px;
+  margin: 0 auto;
+  font-family: 'Ubuntu', sans-serif;
+  background: linear-gradient(98.3deg, #1E3AB3 9.47%, #1652F0 83.7%);
 }
 
-.App-logo {
-  height: 40vmin;
+@keyframes app {
+  to {
+    opacity: 1;
+  }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+.features-item-info {
+  opacity: 0;
+  animation: app 5s linear forwards;
+}
+
+.features-item-info__title {
+  margin: 0;
+  font-size: 14px;
+  color: #fff;
+  font-weight: 400;
+}
+
+.features-item-info__text {
+  margin: 10px 0 0 0;
+  font-size: 10px;
+  color: #CDDBFF;
+  font-weight: 300;
+}
+
+.features-item {
+  position: absolute;
+}
+
+.features-item_first {
+  top: -32px;
+  left: 78px;
+}
+
+.features-item_second {
+  top: 162px;
+  left: 55px;
+}
+
+.features-item_third {
+  top: 316px;
+  left: 78px;
+}
+
+.features-item_fourth {
+  top: -72px;
+  right: 102px;
+}
+
+.features-item_fifth {
+  top: 66px;
+  right: 15px;
+}
+
+.features-item_sixth {
+  top: 198px;
+  right: 20px;
+}
+
+.features-item_seventh {
+  top: 414px;
+  right: 40px;
+}
+
+.line {
+  position: absolute;
+}
+
+.first-line {
+  margin-top: -48px;
+  left: 240px;
+  top: 16px;
+}
+
+.second-line {
+  margin-top: -108px;
+  left: 100px;
+  top: 125px;
+}
+
+.third-line {
+  margin-top: -44px;
+  left: 92px;
+  top: -4px;
+}
+
+.fourth-line {
+  left: -154px;
+  top: 6px;
+}
+
+.fifth-line {
+  right: 60px;
+  bottom: -15px;
+}
+
+.sixth-line {
+  right: 90px;
+  bottom: -32px;
+}
+
+.seventh-line {
+  top: -22px;
+  left: -150px;
+}
+
+.paths {
+  position: relative;
+  fill: none;
+  stroke-width: 0.5;
+  stroke-dasharray: 5, 5;
+}
+
+.mask {
+  fill: none;
+  stroke-width: 10;
+  animation: mask 3s linear forwards;
+}
+
+/*left*/
+
+.mask_first {
+  stroke-dasharray: 250;
+  stroke-dashoffset: 250;
+}
+
+.mask_second {
+  stroke-dasharray: 330;
+  stroke-dashoffset: 330;
+}
+
+.mask_third {
+  stroke-dasharray: 470;
+  stroke-dashoffset: 470;
+}
+
+/*right*/
+
+.mask_fourth {
+  stroke-dasharray: 170;
+  stroke-dashoffset: 170;
+}
+
+.mask_fifth {
+  stroke-dasharray: 275;
+  stroke-dashoffset: 275;
+}
+
+.mask_sixth {
+  stroke-dasharray: 275;
+  stroke-dashoffset: 275;
+}
+
+.mask_seventh {
+  stroke-dasharray: 175;
+  stroke-dashoffset: 175;
+}
+
+@keyframes mask {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+.container {
+  min-width: 1310px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.header {
+  padding-top: 16px;
+}
+
+.header__wrapper {
+  display: flex;
+  align-items: center;
+  height: 36px;
+}
+
+.header-logo {
+  height: 100%;
+}
+
+.header-nav {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin: 0 -12px 0 auto;
+}
+
+.header-nav__link {
+  position: relative;
+  margin: 0 14px;
+  padding: 0 4px;
+  font-size: 12px;
+  color: #CDDBFF;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.header-nav__link:after {
+  content: '•';
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.header-nav__link:hover,
+.header-nav__link_active {
+  color: #fff;
+}
+
+.header-nav__link:hover:after,
+.header-nav__link_active:after {
+  opacity: 1;
+}
+
+.content {
+  position: relative;
+  width: 1350px;
+  min-height: 590px;
+  margin: 178px auto 80px auto;
+  padding: 0 15px;
+}
+
+.features-bg {
+  position: relative;
+  width: 786px;
+  height: 430px;
+  margin: 0 auto;
+  background-image: url("./images/macbook.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.features-bg__sub {
+  position: absolute;
+  bottom: -5px;
+  right: -162px;
+}
+
+.feature-bg__shadow {
+  position: absolute;
+  bottom: -160px;
+  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.feature-bg__bottom-shadow {
+  margin-top: -40px;
 }
